@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: gnubg.c,v 1.420 2003/06/09 21:24:29 thyssen Exp $
+ * $Id: gnubg.c,v 1.421 2003/06/12 19:00:44 thyssen Exp $
  */
 
 #include "config.h"
@@ -3534,8 +3534,9 @@ extern void CommandHint( char *sz ) {
           ProgressStart( _("Considering moves...") );
           if( FindnSaveBestMoves( &ml, ms.anDice[ 0 ], ms.anDice[ 1 ],
                                   ms.anBoard, 
-                                  fHasMoved ? auch : NULL, &ci,
-                                  &esEvalChequer.ec,
+                                  fHasMoved ? auch : NULL, 
+                                  arSkillLevel[ SKILL_DOUBTFUL ],
+                                  &ci, &esEvalChequer.ec,
                                   aamfEval ) < 0 || fInterrupt ) {
 	    ProgressEnd();
 	    return;
